# nu_plugin_git_prompt

./: Cargo.toml  README.md
src/: main.rs
